tests/snapshots/regression/collections__trailing_commas_everywhere.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/trailing_commas_everywhere.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • tests/fixtures/collections/trailing_commas_everywhere.flx
error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/trailing_commas_everywhere.flx:2:1
  |
2 | f(1,2,);
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `Flow.List.all`, `Flow.List.any`, `Flow.List.map`?
